syntax = "proto3";

package cli;

option java_multiple_files = true;
option java_package = "proto.cli";


service CliBridge {
  rpc submitSqlJob (sqlJobRequest) returns (stream CliDisplayResponse);
}

message sqlJobRequest{
  string sql = 1;
}

message CliDisplayResponse{
  string content = 1;
}